--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -41,3 +41,15 @@ jobs:
       run: mix deps.get
     - name: Run tests
       run: mix test
+
+
+      jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: "E-Chronicler" #Must be unique in Heroku
+          heroku_email: "glidinsky-smith@8thlight.com""
