--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -52,4 +52,4 @@ jobs:
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "E-Chronicler" #Must be unique in Heroku
-          heroku_email: "glidinsky-smith@8thlight.com""
+          heroku_email: "glidinsky-smith@8thlight.com"
