--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -41,12 +41,8 @@ jobs:
       run: mix deps.get
     - name: Run tests
       run: mix test
-
-
-      jobs:
-  build:
     runs-on: ubuntu-latest
-    steps:
+    - name: Push to Heroku
       - uses: actions/checkout@v2
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
