Try to fix YAML

--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -42,12 +42,12 @@ jobs:
     - name: Run tests
       run: mix test
 
-    deploy:
-      runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@v2
-        - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
-          with:
-            heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-            heroku_app_name: "E-Chronicler" #Must be unique in Heroku
-            heroku_email: "glidinsky-smith@8thlight.com"
+    name: Deploy to Heroku
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: "E-Chronicler" #Must be unique in Heroku
+          heroku_email: "glidinsky-smith@8thlight.com"
