--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -42,12 +42,25 @@ jobs:
     - name: Run tests
       run: mix test
 
-    name: Deploy to Heroku
+  release:
+    env:
+      HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+      HEROKU_EMAIL: ${{ secrets.HEROKU_EMAIL }}
     runs-on: ubuntu-latest
+
+    needs: test
+
     steps:
-      - uses: actions/checkout@v2
-      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
-        with:
-          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "E-Chronicler" #Must be unique in Heroku
-          heroku_email: "glidinsky-smith@8thlight.com"
+      - uses: actions/checkout@v1.0.0
+      - run: |+
+          cat >~/.netrc <<EOF
+          machine api.heroku.com
+              login $HEROKU_EMAIL
+              password $HEROKU_API_KEY
+          machine git.heroku.com
+              login $HEROKU_EMAIL
+              password $HEROKU_API_KEY
+          EOF
+      - run: heroku git:remote -a $(basename ${{ github.repository}} )
+      - run: git push heroku HEAD:refs/heads/master
+      - run: heroku run "POOL_SIZE=2 mix ecto.migrate"
