--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -43,24 +43,9 @@ jobs:
       run: mix test
 
   release:
-    env:
-      HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-      HEROKU_EMAIL: ${{ secrets.HEROKU_EMAIL }}
-    runs-on: ubuntu-latest
-
-    needs: build
-
-    steps:
-      - uses: actions/checkout@v1.0.0
-      - run: |+
-          cat >~/.netrc <<EOF
-          machine api.heroku.com
-              login $HEROKU_EMAIL
-              password $HEROKU_API_KEY
-          machine git.heroku.com
-              login $HEROKU_EMAIL
-              password $HEROKU_API_KEY
-          EOF
-      - run: heroku git:remote -a $(basename ${{ github.repository}} )
-      - run: git push heroku HEAD:refs/heads/master
-      - run: heroku run "POOL_SIZE=2 mix ecto.migrate"
+    - name: Deploy to Heroku
+      env:
+        HEROKU_API_TOKEN: ${{ secrets.HEROKU_API_TOKEN }}
+        HEROKU_APP_NAME: "E-Chronicler"
+      if: github.ref == 'refs/heads/main' && job.status == 'success'
+      run: git push https://heroku:$HEROKU_API_TOKEN@git.heroku.com/$HEROKU_APP_NAME.git origin/main:master
