--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -43,9 +43,17 @@ jobs:
       run: mix test
 
   release:
+    env:
+      HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+      HEROKU_EMAIL: ${{ secrets.HEROKU_EMAIL }}
+    runs-on: ubuntu-latest
+
+    needs: test
+
+    steps:
     - name: Deploy to Heroku
       env:
         HEROKU_API_TOKEN: ${{ secrets.HEROKU_API_TOKEN }}
         HEROKU_APP_NAME: "E-Chronicler"
       if: github.ref == 'refs/heads/main' && job.status == 'success'
-      run: git push https://heroku:$HEROKU_API_TOKEN@git.heroku.com/$HEROKU_APP_NAME.git origin/main:master
+      run: git push https://heroku:$HEROKU_API_TOKEN@git.heroku.com/e-chronicler.git origin/main:master
