--- a/.github/workflows/on_merge.yml
+++ b/.github/workflows/on_merge.yml
@@ -3,8 +3,6 @@ name: Elixir CI
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 jobs:
   build:
@@ -42,7 +40,7 @@ jobs:
     - name: Run tests
       run: mix test
 
-  release:
+  deploy:
     env:
       HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
       HEROKU_EMAIL: ${{ secrets.HEROKU_EMAIL }}
@@ -55,6 +53,5 @@ jobs:
       env:
         HEROKU_API_TOKEN: ${{ secrets.HEROKU_API_KEY }}
         HEROKU_APP_NAME: "e-chronicler"
-      if: github.ref == 'refs/heads/main' && job.status == 'success'
-      run: git push https://heroku:$HEROKU_API_KEY@git.heroku.com/e-chronicler.git origin/main:master
+      run: git push https://heroku:$HEROKU_API_TOKEN@git.heroku.com/e-chronicler.git origin/main:master
       
