--- a/.github/workflows/on_merge.yml
+++ b/.github/workflows/on_merge.yml
@@ -1,4 +1,4 @@
-name: Elixir CI
+name: On Merge
 
 on:
   push:
@@ -41,9 +41,6 @@ jobs:
       run: mix test
 
   deploy:
-    env:
-      HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-      HEROKU_EMAIL: ${{ secrets.HEROKU_EMAIL }}
     runs-on: ubuntu-latest
 
     needs: build
