--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -1,4 +1,4 @@
-name: Elixir CI
+name: On Push
 
 on: push
 
@@ -37,18 +37,3 @@ jobs:
       run: mix deps.get
     - name: Run tests
       run: mix test
-
-  release:
-    env:
-      HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-      HEROKU_EMAIL: ${{ secrets.HEROKU_EMAIL }}
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Deploy to Heroku
-      env:
-        HEROKU_API_TOKEN: ${{ secrets.HEROKU_API_KEY }}
-        HEROKU_APP_NAME: "e-chronicler"
-      if: github.ref == 'refs/heads/main' && job.status == 'success'
-      run: git push https://heroku:$HEROKU_API_KEY@git.heroku.com/e-chronicler.git origin/main:master
-      
