--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -1,9 +1,9 @@
 name: On Push
 
-on: 
-  push: 
-    branches:
-      - '!main'
+on:
+  push:
+    branches-ignore:
+      - main
 
 jobs:
   build:
