--- a/.github/workflows/reseed.yml
+++ b/.github/workflows/reseed.yml
@@ -1,13 +1,10 @@
 name: Reseed Database
-
 on: workflow_dispatch
 
 jobs:
 
   database-reseed: 
     runs-on: ubuntu-latest
-
-    needs: build
 
     steps:
     - uses: actions/checkout@v2
@@ -18,7 +15,6 @@ jobs:
         HEROKU_API_TOKEN: ${{ secrets.HEROKU_API_KEY }}
         HEROKU_APP_NAME: "e-chronicler"
       run: | 
-      ecto.drop 
-      ecto.create 
-      ecto.migrate 
-      run priv/repo/seeds.exs
+        HEROKU_API_KEY=$HEROKU_API_TOKEN heroku pg:reset DATABASE -a $HEROKU_APP_NAME --confirm $HEROKU_APP_NAME 
+        HEROKU_API_KEY=$HEROKU_API_TOKEN heroku run mix ecto.migrate -a $HEROKU_APP_NAME
+        HEROKU_API_KEY=$HEROKU_API_TOKEN heroku run mix run priv/repo/seeds.exs -a $HEROKU_APP_NAME
